@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)ext.h	1.55 (gritter) 7/17/06
+ * Sccsid @(#)ext.h	1.56 (gritter) 7/17/06
  */
 
 /*
@@ -423,6 +423,7 @@ extern void	casemc(void);
 extern void	casesentchar(void);
 extern void	casetranschar(void);
 extern void	casebreakchar(void);
+extern void	casenhychar(void);
 extern void	casemk(void);
 extern void	casesv(void);
 extern void	caseos(void);
